dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: vue
  labels:
    kiali_wizard: traffic_shifting
  annotations: ~
spec:
  host: vue.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy: ~
