vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: vue
  labels:
    kiali_wizard: traffic_shifting
spec:
  http:
    - route:
        - destination:
            host: vue.default.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: vue.default.svc.cluster.local
            subset: v2
          weight: 0
  hosts:
    - "*"
  gateways:
    - default/vue-gateway
